# CPU_attention

./: .gitignore  Makefile  README.md  attention_output.cpp  attention_output.h  attention_score.cpp  attention_score.h  gemv.cpp  key_gemv.cpp  key_gemv.h  key_gemv_half.txt  main  main.cpp  result.txt  result_half.txt  result_key.txt  result_key_half.txt  run.sh  shared.h  shift.c  test  test.cpp  test_key_gemv.cpp  test_key_gemv.h  test_value_gemv.cpp  test_value_gemv.h  testtest.txt  utils.cpp  utils.h  value_gemv.cpp  value_gemv.h  value_gemv_old.cpp
integrate_with_ctypes/: cpp_threads.py  cpu_attention.cpp
integration/: CMakeLists.txt  example.cpp  main.py  simple_kernel.cpp  simple_kernel_wrapper.cpp  test.py  test.sh  test.txt  test_alignment.py  test_multiprocessing.py  test_threading.py  utils.py
integration/cpp/: attn_module.cpp
integration/src/: mymath.cpp
integration_with_ctypes/: Makefile  example.py  run_key.sh  utils.py
softmax/: Makefile  avx_mathfun.h  main.cpp  softmax.cpp  softmax.hpp  test_softmax.cpp  test_softmax.hpp
test_ctypes/: -s  Makefile  cpp_threads.cpp  cpu_attention.cpp  example.cpp  example.py  result_key.txt  result_value.txt  run_value.sh  shm_test.cpp  shm_test.py  utils.py
test_pybind/project/: CMakeLists.txt
test_pybind/project/src/: binder.cpp
